service-mesh/custom-routing/5. Header Based Routing/category-api/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: category-virtual-service
spec:
  hosts:
  - category-api-service.default.svc.cluster.local
  http:
  - match:
    - headers:
        test-header:
          exact: canary
    route:
    - destination:
        host: category-api-service.default.svc.cluster.local
        subset: risky-subset
  - route:
    - destination:
        host: category-api-service.default.svc.cluster.local
        subset: safe-subset
---
